cmake_minimum_required(VERSION 3.15)
project(cpa)

include_directories(
    include
    src
)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-utf-8)
elseif (MSVC)
    add_compile_options(/utf-8)
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        add_compile_options(-Os -utf-8)
    elseif (MSVC)
        add_compile_options(/Os /utf-8)
    endif()
else()
    add_compile_definitions(__DEBUG)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(LIB_DIR ${CMAKE_SOURCE_DIR}/bin)

add_subdirectory(src)
